1-files/1-svc-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
