1-files/1-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30100
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
